<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:layout_marginVertical="45sp"
    android:layout_marginHorizontal="15sp"

    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.DoctorFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:textSize="25sp"
        android:text="Create new shift"
        android:gravity="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:textSize="15sp"
        android:text="@string/select_the_date"
        android:gravity="center">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:layout_gravity="center"
        android:id="@+id/dateSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:text="@string/date"
        android:layout_margin="10sp">
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:textSize="15sp"
        android:text="Select start and end time (format as hh:mm in 24h format, and make sure to pick in interval of 30 minutes)"
        android:gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Start Time" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_margin="15sp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="End Time" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_gravity="center"
        android:id="@+id/submitShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:text="@string/submit_shift"
        android:layout_margin="15sp">
    </com.google.android.material.button.MaterialButton>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_margin="15sp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@drawable/divider"
        android:gravity="top"
        android:orientation="vertical"
        android:showDividers="middle">

        <TextView
            android:id="@+id/upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:text="Upcoming Shifts"
            android:layout_gravity="center"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>